logs/coopr.pyomo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/coopr'...
Listing './lib/python3.5/site-packages/coopr/pyomo'...
Listing './lib/python3.5/site-packages/coopr/pyomo/base'...
Listing './lib/python3.5/site-packages/coopr/pyomo/check'...
Listing './lib/python3.5/site-packages/coopr/pyomo/components'...
Listing './lib/python3.5/site-packages/coopr/pyomo/data'...
Listing './lib/python3.5/site-packages/coopr/pyomo/expr'...
Listing './lib/python3.5/site-packages/coopr/pyomo/plugins'...
Listing './lib/python3.5/site-packages/coopr/pyomo/plugins/check'...
Listing './lib/python3.5/site-packages/coopr/pyomo/plugins/check/checkers'...
Listing './lib/python3.5/site-packages/coopr/pyomo/plugins/check/checkers/py3k'...
Listing './lib/python3.5/site-packages/coopr/pyomo/plugins/check/checkers/pyomo'...
Listing './lib/python3.5/site-packages/coopr/pyomo/plugins/check/checkers/sample'...
Listing './lib/python3.5/site-packages/coopr/pyomo/plugins/data'...
Listing './lib/python3.5/site-packages/coopr/pyomo/plugins/io'...
Listing './lib/python3.5/site-packages/coopr/pyomo/plugins/io/ampl'...
Listing './lib/python3.5/site-packages/coopr/pyomo/plugins/transform'...
Compiling './lib/python3.5/site-packages/coopr/pyomo/plugins/transform/model.py'...
***   File "./lib/python3.5/site-packages/coopr/pyomo/plugins/transform/model.py", line 330
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/coopr/pyomo/preprocess'...
Listing './lib/python3.5/site-packages/coopr/pyomo/scripting'...
Listing './lib/python3.5/site-packages/coopr/pyomo/tests'...
Listing './lib/python3.5/site-packages/coopr/pyomo/tests/ampl'...
Listing './lib/python3.5/site-packages/coopr/pyomo/tests/check'...
Listing './lib/python3.5/site-packages/coopr/pyomo/tests/data'...
Listing './lib/python3.5/site-packages/coopr/pyomo/tests/diet'...
Listing './lib/python3.5/site-packages/coopr/pyomo/tests/examples'...
Listing './lib/python3.5/site-packages/coopr/pyomo/tests/expr'...
Listing './lib/python3.5/site-packages/coopr/pyomo/tests/unit'...
Listing './lib/python3.5/site-packages/coopr.pyomo-3.6.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
